# kombinat

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dbmate.toml  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: ci.yml
db/migrations/: 20260328000000_initial_schema.sql  README.md
kombinat/: auth.py  config.py  database.py  dependencies.py  expiry.py  families.py  main.py
kombinat/api/: annotations.py  batches.py  contributors.py  router.py  stats.py
kombinat/schemas/: annotations.py  batches.py  contributors.py  pairs.py  stats.py
kombinat/tools/ingest/: __main__.py  bm25.py  config.py  dense.py  fusion.py  ingest-implementation.md  loader.py  pairs.py  retrieval.py  source.py  writer.py
kombinat/validator/: checks.py  promote.py  reputation.py
tests/: conftest.py  test_annotations.py  test_auth.py  test_batches.py  test_claim_steering.py  test_config.py  test_database.py  test_expiry.py  test_health.py  test_ingest_writer.py  test_stats.py  test_validator.py
tests/ingest/: conftest.py  test_ingest_bm25.py  test_ingest_cli.py  test_ingest_dense.py  test_ingest_fusion.py  test_ingest_pairs.py  test_ingest_source.py
