[project]
name = "kombinat"
version = "0.1.0"
description = "Distributed annotation coordination server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
]
ingest = [
    "rank-bm25>=0.2",
    "sentence-transformers>=3.3",
    "datasets>=3.1",
    "pyarrow>=18",
    "faiss-cpu>=1.9",
    "numpy>=1.26",
    "rich>=13.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (real model downloads, deselect with -m 'not slow')"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
